works view (tiles: pose & chekVisibility): fixed

--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -139,7 +139,7 @@
 
     // MOBILES
     @media (min-width: 320px) and (max-width: 767px) {
-      width: 120px;
+      width: 90px;
       top: 113px;
       left: 30px;
     }
